# parachain-template

./: .gitignore  Cargo.toml  README.md
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  service.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
